update tmux with restruct and continumm for session-restore after reboot

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,16 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # Remove the ugly green status bar
 set -g @plugin 'niksingh710/minimal-tmux-status'
 
+# Restore tmux-session even after reboot
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# restore neovim-session after reboot
+set -g @resurrect-strategy-nvim 'session'
+
+# Start automatic-restore after boot
+set -g @continuum-restore 'on'
+
 ## Keybinds
 
 # Enable mouse
